Finalize Ether 2.0: Docker, Persistence, UI & Cleanup
- Added Redis & PostGIS improvements to docker-compose.
- Updated DatabaseConfig for container environment variables.
- Renamed RealDataService to ExternalDataService.
- Implemented 3D contour lines and unified projection logic.
- Fixed UI bugs, duplicate variables, and repository initialization errors.
- Completed I18n translation keys and fixed associated tests.
- Generated full Javadoc and added package-info files.
- Cleaned up unused imports and dead code.